Add data of Raamsdonksveer 1911 excursions
Close #1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Data</h2>
     <ul>
       <li>
-        <p>des Tombe, F. A. (1911). Verslag der van 17 tot 21 Juli 1910 gehouden excursie in de omstreken van Tilburg en der daaraan verbonden Vergadering. <i>Nederlandsch Kruidkundig Archief</i>, 44–62. <a href="https://www.biodiversitylibrary.org/page/4499705">Full text</a></p>
+        <p>des Tombe, F. A. (1911). Verslag der van 17 tot 21 Juli 1910 gehouden excursie in de omstreken van Tilburg en der daaraan verbonden Vergadering. <i>Nederlandsch Kruidkundig Archief, 22</i>, 44–62. <a href="https://www.biodiversitylibrary.org/page/4499705">Full text</a></p>
 
         <p>Series of excursions near Tilburg. The first excursion, July 17th 1910, was attended by Prof. Dr. G. van Iterson, P. J. M. Schuijt, K. Tjebbes, Dr. L. Vuyck, Dr. Th. Weevers and F. A. des Tombe; the rest were attended by D. Lako, Dr. L. Vuyck, and F. A. des Tombe. The plant list also contains data on two preliminary excursions, May 14th and 15th 1910, both attended by F. A. des Tombe.</p>
 
@@ -268,7 +268,157 @@
           </ul>
         </details>
 
-        <p>For the plants with locations: <a href="view.html?tilburg-1910&amp;tilburg-1910-routes">Map</a> &amp; <a href="data/tilburg-1910.json">data</a></p>
+        <p>For the plants with locations: <a href="view.html?tilburg-1910&amp;tilburg-1910-routes&amp;center=[51.56,5.1]&amp;zoom=12">Map</a> &amp; <a href="data/tilburg-1910.json">data</a></p>
+      </li>
+      <li>
+        <p>Nederlandsche Botanische Vereeniging. (1912). Verslag der in Augustus 1911 gehouden excursies. <i>Nederlandsch kruidkundig archief, 22</i>, 56–66. <a href="https://www.biodiversitylibrary.org/page/4499843">Full text</a></p>
+
+        <p>Series of excursions around Raamsdonksveer between the 15th and 17th of August, 1911, attended by Goethart, Lako, Pulle, Quarles van Ufford and Schuijt. Data from an earlier excursion May 14th 1911 attended by Pulle and Schuijt was included.</p>
+
+        <ul>
+          <li>May 14th 1911: Raamsdonksveer - Biesbosch - Moordgat - Steen van Kloosterzand - Raamsdonksveer</li>
+          <li>August 15th 1911: Raamsdonksveer - Biesbosch - Nieuw Steenen Muur - de Vogelenzang - Raamsdonksveer</li>
+          <li>August 15th 1911, evening: Raamsdonksveer - Raamsdonk - Raamsdonksveer</li>
+          <li>August 16th 1911: Raamsdonksveer - den Hout - Oosterhout - Raamsdonksveer</li>
+          <li>August 17th 1911: Capelle-Nieuwe Vaart - Dongen</li>
+        </ul>
+
+        <p>Only relatively uncommon plants are listed with detailed locations; these are the other plants:</p>
+
+        <details>
+          <ul>
+            <li><i>Achillea Millefolium</i>: alg.</li>
+            <li><i>Achillea Ptarmica</i>: verspr.</li>
+            <li><i>Aegopodium Podagrana</i>: verspr.</li>
+            <li><i>Agrostis alba</i>: alg.</li>
+            <li><i>Alisma Plantago</i>: alg.</li>
+            <li><i>Alnus glutinosa</i>: in de grienden, aan kanten van wegen en onder hakhout</li>
+            <li><i>Angelica sylvestris</i>: vrij alg.</li>
+            <li><i>Anthoxanthum odoratum</i>: alg.</li>
+            <li><i>Anthriscus sylvestris</i>: alg.</li>
+            <li><i>Arrhenatherum elatius</i>: alg.</li>
+            <li><i>Atriplex latifoiia</i>: verspr.</li>
+            <li><i>Avena sativa</i>: cultuur en opslag</li>
+            <li><i>Bellis perennis</i>: alg.</li>
+            <li><i>Betula verrucosa</i>: cultuur, onder hakhout</li>
+            <li><i>Bidens tripartitus</i>: verspr.</li>
+            <li><i>Brassica oleracea</i>: cultuur en opslag</li>
+            <li><i>Bromus mollis</i>: alg.</li>
+            <li><i>Calluna vulgaris</i>: op heigrond alg.</li>
+            <li><i>Capsella bursa pastoris</i>: alg.</li>
+            <li><i>Carduus crispus</i>: verspr.</li>
+            <li><i>Castanea vesca</i>: cultuur</li>
+            <li><i>Centaurea Jacea</i>: alg.</li>
+            <li><i>Cerastium triviale</i>: alg.</li>
+            <li><i>Chenopodium album</i>: alg.</li>
+            <li><i>Cirsium arvense</i>: verspr.</li>
+            <li><i>Cirsium lanceolatum</i>: verspr.</li>
+            <li><i>Cirsium palustre</i>: verspr.</li>
+            <li><i>Convolvulus Sepium</i>: alg., op rietschorren, onder heggen en hakhout</li>
+            <li><i>Crepis virens</i>: alg.</li>
+            <li><i>Dactylis glomerata</i>: alg.</li>
+            <li><i>Daucus Carota</i>: op kleigronden alg.</li>
+            <li><i>Elodea canadensis</i>: verspr.</li>
+            <li><i>Epilobium hirsutum</i>: verspr.</li>
+            <li><i>Epilobium parviflorum</i>: verspr.</li>
+            <li><i>Equisetum palustre</i>: alg. op vochtige gronden, ook op bouwland</li>
+            <li><i>Erica Tetralix</i>: op heigrond alg.</li>
+            <li><i>Festuca elatior</i>: vrij alg.</li>
+            <li><i>Fraxinus excelsior</i>: cultuur</li>
+            <li><i>Galium Mollugo</i>: verspreid</li>
+            <li><i>Galium palustre</i>: vrij alg. in slooten</li>
+            <li><i>Glechoma hederacea</i>: vrij alg. op ruigten</li>
+            <li><i>Glyceria fluitans</i>: verspr.</li>
+            <li><i>Glyceria spectabilis</i>: alg.</li>
+            <li><i>Heracleum Sphondylium</i>: alg.</li>
+            <li><i>Holcus lanatus</i>: alg.</li>
+            <li><i>Hordeum murinum</i>: op ruigten</li>
+            <li><i>Hordeum vulgare</i>: cultuur en opslag</li>
+            <li><i>Hydrocharis morsus rance</i>: alg. in slooten</li>
+            <li><i>Hypochaeris radicata</i>: alg.</li>
+            <li><i>Juncus effusus</i>: vrij alg.</li>
+            <li><i>Juncus lamprocarpos</i>: verspr.</li>
+            <li><i>Juncus sylvaticus</i>: op diluviale gronden vrij alg.</li>
+            <li><i>Juncus tenuis</i>: op diluviale gronden vrij alg.</li>
+            <li><i>Juglans regia</i>: cultuur</li>
+            <li><i>Lamium album</i>: verspr.</li>
+            <li><i>Lemna minor</i>: verspr.</li>
+            <li><i>Leontodon autumnalis</i>: alg.</li>
+            <li><i>Limnanthemum nymphaevides</i>: verspreid</li>
+            <li><i>Linaria vulgaris</i>: verspr.</li>
+            <li><i>Lolium perenne</i>: alg.</li>
+            <li><i>Lotus uliginosus</i>: alg. op lage vochtige gronden</li>
+            <li><i>Lychnis flos cuculi</i>: alg.</li>
+            <li><i>Lycopus eurepaeus</i>: verspr.</li>
+            <li><i>Lysimachia vulgaris</i>: verspr.</li>
+            <li><i>Lythrum Salicario</i>: alg.</li>
+            <li><i>Matricaria Chamomilla</i>: alg.</li>
+            <li><i>Molinia coerulea</i>: op heigrond</li>
+            <li><i>Myosotis palustris</i>: verspr.</li>
+            <li><i>Myrica Gale</i>: op heigrond</li>
+            <li><i>Nuphar luteum</i>: verspr.</li>
+            <li><i>Nymphaea alba</i>: verspr.</li>
+            <li><i>Oenanthe Phellandrium</i>: verspr.</li>
+            <li><i>Ornithopus sativus</i>: cultuur en opslag</li>
+            <li><i>Phalaris arundinacea</i>: verspr., op rietschorren en aan slootkanten</li>
+            <li><i>Phleum pratense</i>: versp.</li>
+            <li><i>Phragmites communis</i>: alg.</li>
+            <li><i>Plantago lanceolata</i>: alg.</li>
+            <li><i>Plantago. major</i>: alg.</li>
+            <li><i>Poa annua</i>: alg.</li>
+            <li><i>Polygonum amphibium</i>: verspr.</li>
+            <li><i>Polygonum aviculare</i>: alg.</li>
+            <li><i>Polygonum Convolvulus</i>: tamelijk verspr.</li>
+            <li><i>Polygonum Hydropiper</i>: verspr.</li>
+            <li><i>Polygonum nodosum</i>: verspr.</li>
+            <li><i>Polyg. Persicaria</i>: vrij alg</li>
+            <li><i>Populus canadensis</i>: cultuur</li>
+            <li><i>Populus pyramidalis</i>: cultuur</li>
+            <li><i>Potentilla Anserina</i>: alg.</li>
+            <li><i>Prunella vulgaris</i>: alg.</li>
+            <li><i>Pulicaria dysenterica</i>: op kleigrond verspr.</li>
+            <li><i>Quercus Robur</i>: cultuur</li>
+            <li><i>Ranunculus acris</i>: alg.</li>
+            <li><i>Ranunculus Flammula</i>: verspr.</li>
+            <li><i>Ranunculus repens</i>: alg.</li>
+            <li><i>Rhamnus Frangula</i>: verspr.</li>
+            <li><i>Rubus species</i>: verspr.</li>
+            <li><i>Rumex Acetosa</i>: alg.</li>
+            <li><i>Rumex Acetosella</i>: op zandgrond verspr.</li>
+            <li><i>Rumex conglomeratus</i>: vrij alg.</li>
+            <li><i>Rumex obtusifolius</i>: vrij alg.</li>
+            <li><i>Sagittaria sagittifolia</i>: alg. op rietschorren en in slooten</li>
+            <li><i>Salix alba</i>: cultuur</li>
+            <li><i>Salix species</i>: verder talrijke basterdvormen, die alleen naar het blad niet te determineeren zijn, en even als de vorige soorten, behalve S. repens, ook worden aangeplant in grienden, aan wegen enz.</li>
+            <li><i>Scutellaria galericulata</i>: verspr.</li>
+            <li><i>Secale cereale</i>: cultuur en opslag</li>
+            <li><i>Senecio Jacobaea</i>: alg. op dijken, aan kanten van wegen</li>
+            <li><i>Senecio vulgaris</i>: alg.</li>
+            <li><i>Sisymbrium officinale</i>: alg. op ruigten</li>
+            <li><i>Sium latifoliuni</i>: vrij algemeen</li>
+            <li><i>Solanum Dulcamara</i>: verspr.</li>
+            <li><i>Solanum nigrum</i>: vrij alg. op bouwland</li>
+            <li><i>Sonchus asper</i>: verspr.</li>
+            <li><i>Sparganium ramosum</i>: verspr.</li>
+            <li><i>Spiraea Ulmaria</i>: verspr.</li>
+            <li><i>Stellaria media</i>: verspr.</li>
+            <li><i>Stratiotes aloides</i>: verspr.</li>
+            <li><i>Succisa pratensis</i>: verspr.</li>
+            <li><i>Symphytum officinale</i>: alg.</li>
+            <li><i>Taraxacum officinale</i>: alg.</li>
+            <li><i>Thysselinum palustre</i>: verspr.</li>
+            <li><i>Trifolium pratense</i>: alg.</li>
+            <li><i>Trifolium repens</i>: alg.</li>
+            <li><i>Triticum repens</i>: verspr. aan kanten van wegen, onder hakhout</li>
+            <li><i>Ulmus campestris</i>: cultuur als opgaande boomen en als heesters</li>
+            <li><i>Urtica dioica</i>: alg. op ruigten</li>
+            <li><i>Urtica urens</i>: op ruigten, minder alg. dan de vorige</li>
+            <li><i>Valeriana officinalis</i>: verspr.</li>
+            <li><i>Vicia Cracca</i>: verspr. aan wegen, op bouwland</li>
+          </ul>
+        </details>
+
+        <p>For the plants with locations: <a href="view.html?raamsdonksveer-1911&amp;raamsdonksveer-1911-routes&amp;center=[51.68,4.9]&amp;zoom=12">Map</a> &amp; <a href="data/raamsdonksveer-1911.json">data</a></p>
       </li>
     </ul>
 
