Add interactive grid map

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
     <p>They have 4 components, "R 4.", "18.", "2", and "2":</p>
 
     <ul>
-      <li><b>R 4.</b> indicates the row ("R") and column ("4") in a grid covering the Netherlands. This grid is based on the divisions of the <i>Militaire Stafkaart</i>, specifically the 1:50 000 edition (<a href="map-grid.jpg">overview</a>). The rows of the grid are labeled G to V (skipping vowels, so GHJKLMNPQRSTV). The columns are labeled 1 to 8, where columns 1 and 8 are half as wide as the rest.</li>
+      <li><b>R 4.</b> indicates the row ("R") and column ("4") in a grid covering the Netherlands. This grid is based on the divisions of the <i>Militaire Stafkaart</i>, specifically the 1:50 000 edition (<a href="map-grid.jpg">overview</a>). The rows of the grid are labeled G to V (skipping vowels, so GHJKLMNPQRSTV). The columns are labeled 1 to 8, where columns 1 and 8 are half as wide as the rest. <a href="view.html?grid">View the grid on the map.</a></li>
       <li>These grid cells are then further divided into 6&times;8 sub-grids. The second component of the location signifies which cell in the sub-grid the location is in. <b>18.</b> thus means 1 down and 8 across. These cells are called "uurhokken" or hour cells, because walking along one side (5 km) takes approximately an hour.</li>
       <li>The hour cells are then divided into half-hour cells, a 2&times;2 sub-sub-grid. This grid is indexed 1 to 4, with 1 meaning top left, 2 top right, 3 bottom left, and 4 bottom right. <b>2</b> thus means the top right quarter.</li>
       <li>The half-hour cells are then further divided into quarter-hour cells, again a 2&times;2 sub-sub-sub-grid. It is indexed in the same way, so <b>2</b> again means the top right corner.</li>
